--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 										<div class="form-group">
 											<select class="selectpicker form-control" style="height: auto;border: 2px solid var(--grundfarbe);font-size: 14px;"
 												onchange="classicshishawahl()" id="classicshishaoutput" data-width="auto">
-												<option selected>Geschmack wählen</option>
+												<option data-img="img/product-preview.png" selected>Geschmack wählen</option>
 												<option data-img="img/product-preview.png" data-tabak="Al-Fakir">Doppel-Apfel</option>
 												<option data-img="img/product-preview.png" data-tabak="Al-Fakir">Traube-Minze</option>
 												<option data-img="img/product-preview.png" data-tabak="Kilim">Zitrone-Minze</option>
@@ -142,7 +142,7 @@
 								<div class="form-group">
 									<select class="selectpicker form-control" style="height: auto;background-color: var(--hellgrau);color: var(--grundfarbe);border: 2px solid var(--grundfarbe);font-size: 14px;"
 										onchange="premiumshishawahl()" id="premiumshishaoutput" data-width="auto">
-										<option selected>Geschmack wählen</option>
+										<option data-img="img/product-preview.png" selected>Geschmack wählen</option>
 										<option data-img="img/product-preview.png" data-tabak="TP">Ringel-Rangel</option>
 										<option data-img="img/product-preview.png" data-tabak="TP">Okolom</option>
 										<option data-img="img/product-preview.png" data-tabak="187">Hamburg</option>
@@ -193,7 +193,7 @@
 								<div class="form-group">
 									<select class="selectpicker form-control" style="height: auto;background-color: var(--grundfarbe);color:white;border: 2px solid var(--secondary);font-size: 14px;"
 										onchange="exclusivshishawahl()" id="exclusivshishaoutput" data-width="auto">
-										<option selected>Geschmack wählen</option>
+										<option data-img="img/product-preview.png" selected>Geschmack wählen</option>
 										<option data-img="img/product-preview.png" data-tabak="Fumari">Ceylon-Chi/Spy-Chi</option>
 										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Lemon-Chill</option>
 										<option data-img="img/product-preview.png" data-tabak="Social Smoke">Watermelon-Chill</option>
