--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" class="no-js">
 <head>
 	<meta charset="UTF-8">
-	<meta name="theme-color" content="var(--grundfarbe)">
-	<link rel="icon" sizes="192x192" href="img/favicon2.png">
-	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
+	<meta name="theme-color" content="#8e793e">
+	<link rel="icon" sizes="192x192" href="img/favicon1.png">
+	<meta name='viewport' content='width=device-width, initial-scale=1.0, shrink-to-fit=no, maximum-scale=1.0, user-scalable=0'/>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700|Merriweather:400italic,400' rel='stylesheet' type='text/css'>
 
@@ -37,7 +37,6 @@
 </section>
 
 	<main>
-		<nav class="navbar1"></nav>
 		<nav class="navbar2">
 				<a href="index.html" ><img src="img/logo.png" style="position: fixed; width: 100px; height: 35px; top: 15px; left: 0%; z-index: 4;"></a>
 			<div class="hamburger">
